--- a/themes/yilia/_config.yml
+++ b/themes/yilia/_config.yml
@@ -47,9 +47,9 @@ reward_type: 2
 # 打赏wording
 reward_wording: '不用吃土咯,哈哈'
 # 支付宝二维码图片地址，跟你设置头像的方式一样。比如：/assets/img/alipay.jpg
-alipay: /assets/2.png
+alipay: /img/2.png
 # 微信二维码图片地址
-weixin: /assets/1.png
+weixin: /img/1.png
 
 # 目录
 # 目录设定：0-不显示目录； 1-文章对应的md文件里有toc:true属性，才有目录； 2-所有文章均显示目录
@@ -68,7 +68,7 @@ google_analytics: ''
 favicon: /favicon.png
 
 #你的头像url
-avatar: /assets/me.jpg
+avatar: /img/me.jpg
 
 #是否开启分享
 share_jia: true
